# internal/model/auth_request.go
@@ -1,26 +1,22 @@
 package model
 
-// SignInRequest represents the request body for user authentication
-// swagger:model SignInRequest
 type SignInRequest struct {
-	// Username for authentication (4-100 characters)
-	// required: true
-	// min: 4
-	// max: 100
-	// example: "john.doe"
-	Username string `json:"username" validate:"required,min=4,max=100"`
-
-	// Password for authentication (must be strong password)
-	// required: true
-	// example: "StrongP@ssw0rd123"
+	NIK      string `json:"nik" validate:"required,len=16,numeric"`
 	Password string `json:"password" validate:"required,is-strong-password"`
 }
 
-// VerifyAccountRequest represents the request body for account verification
-// swagger:model VerifyAccountRequest
+type SignUpRequest struct {
+	NIK            string `json:"nik" validate:"required,len=16,numeric"`
+	FullName       string `json:"full_name" validate:"required,min=3,max=100"`
+	LegalName      string `json:"legal_name" validate:"required,min=3,max=100"`
+	PlaceOfBirth   string `json:"place_of_birth" validate:"required,min=2,max=100"`
+	DateOfBirth    string `json:"date_of_birth" validate:"required,is-valid-date"`
+	Salary         int64  `json:"salary" validate:"required,min=0"`
+	IDCardPhotoURL string `json:"id_card_photo_url" validate:"required,url"`
+	SelfiePhotoURL string `json:"selfie_photo_url" validate:"required,url"`
+	Password       string `json:"password" validate:"required,is-strong-password"`
+}
+
 type VerifyAccountRequest struct {
-	// Verification token
-	// required: true
-	// example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
 	Token string `validate:"required"`
 }
