# internal/model/model_swagger.go
@@ -1,0 +1,11 @@
+package model
+
+type SignInResponseWrapper struct {
+	Ok   bool
+	Data SignInResponse
+}
+
+type SignUpResponseWrapper struct {
+	Ok   bool
+	Data SignUpResponse
+}
