# internal/route/auth_route.go
@@ -5,4 +5,7 @@ func (a *Route) SetupAuthRoute() {
 
 	a.App.Post("/v1/auth/sign-in", a.AuthHandler.SignIn)
 	a.Log.Info("mapped {/v1/auth/sign-in, POST} route")
+
+	a.App.Post("/v1/auth/sign-up", a.AuthHandler.SignUp)
+	a.Log.Info("mapped {/v1/auth/sign-up, POST} route")
 }
